<resources>
    <string name="app_name">Movie Tracker</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_list">List of movies</string>
    <string name="favorite">Favorite</string>
    <string name="watched">Watched</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="watched_movies">Watched</string>
    <string name="search_hint">Search for movies...</string>
    <string name="movie_details">Movie Details</string>
    <string name="release_year">Release Year: %1$d</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="marked_as_favorite">Marked as Favorite</string>
    <string name="mark_as_watched">Mark as Watched</string>
    <string name="marked_as_watched">Marked as Watched</string>
    <string name="add_movie">Add Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="enter_movie_title">Enter movie title</string>
    <string name="enter_release_year">Enter release year</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_loading_movies">Error loading movies</string>
    <string name="no_movies_found">No movies found</string>
    <string name="no_favorites">No favorite movies yet</string>
    <string name="no_watched_movies">No watched movies yet</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="retry">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>